misc/unclutter: man hack

--- a/misc/unclutter/Makefile
+++ b/misc/unclutter/Makefile
@@ -1,11 +1,8 @@
-
-
 PORTNAME=	unclutter
 PORTVERSION=	8
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	misc
-MASTER_SITES=	${MASTER_SITE_XCONTRIB}
-MASTER_SITE_SUBDIR=	utilities
+MASTER_SITES=	XCONTRIB/utilities
 
 MAINTAINER=	ports@midnightbsd.org
 COMMENT=	Remove idle cursor image from screen
@@ -13,9 +10,13 @@ COMMENT=	Remove idle cursor image from screen
 LICENSE=        publicdom
 
 WRKSRC=		$(WRKDIR)/unclutter
-USES=		imake tar:Z
+USES=		imake tar:Z xorg
 USE_XORG=	x11 xext
 PLIST_FILES=	bin/unclutter \
-		man/man1/unclutter.1.gz
+		share/man/man1/unclutter.1.gz
+
+post-install:
+	${MKDIR} ${PREFIX}/share/man/man1/
+	-${MV} ${PREFIX}/man/man1/unclutter.1.gz ${PREFIX}/share/man/man1/
 
 .include <bsd.port.mk>
