misc/timezonemap: www

--- a/misc/timezonemap/Makefile
+++ b/misc/timezonemap/Makefile
@@ -5,6 +5,7 @@ CATEGORIES=	misc gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Gtk3 timezone map widget, forked from gnome which forked from Ubiquity
+WWW=		https://github.com/dashea/timezonemap
 
 LICENSE=	gpl3
 LICENSE_FILE=	${WRKSRC}/COPYING
