add py-types-Jinja2 py-types-MarkupSafe

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1387,6 +1387,8 @@ SUBDIR += py-twine1
 SUBDIR += py-twisted
 SUBDIR += py-txaio
 SUBDIR += py-typeguard
+SUBDIR += py-types-Jinja2
+SUBDIR += py-types-MarkupSafe
 SUBDIR += py-types-PyYAML
 SUBDIR += py-types-docutils
 SUBDIR += py-types-jsonschema
