--- a/databases/mysqltuner/Makefile
+++ b/databases/mysqltuner/Makefile
@@ -1,16 +1,18 @@
 PORTNAME=	mysqltuner
-PORTVERSION=	1.7.17
+PORTVERSION=	2.6.0
+DISTVERSIONPREFIX=	v
 CATEGORIES=	databases
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Assist you with MySQL Configuration
+WWW=		https://github.com/major/MySQLTuner-perl
 
 LICENSE=	gpl3
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 OPTIONS_DEFINE=	DOCS
 
-USES=		perl5
+USES=		perl5 shebangfix
 NO_ARCH=	yes
 NO_BUILD=	yes
 USE_GITHUB=	yes
@@ -18,6 +20,8 @@ GH_ACCOUNT=	major
 GH_PROJECT=	MySQLTuner-perl
 
 PLIST_FILES=	bin/${PORTNAME}
+
+SHEBANG_FILES=	${PORTNAME}.pl
 
 PORTDOCS=	CONTRIBUTING INTERNALS README USAGE
 
