--- a/security/fakeroot/Makefile
+++ b/security/fakeroot/Makefile
@@ -1,16 +1,16 @@
 PORTNAME=	fakeroot
-PORTVERSION=	1.23
+PORTVERSION=	1.37.1.2
 CATEGORIES=	security
 MASTER_SITES=	DEBIAN
 DISTNAME=	${PORTNAME}_${PORTVERSION}.orig
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simulate the root user behaviour
-WWW=		http://freshmeat.net/projects/fakeroot
+WWW=		https://tracker.debian.org/pkg/fakeroot
 
 LICENSE=	gpl3
 
-USES=	tar:xz libtool
+USES=	libtool
 
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=		--with-ipc=tcp
