add py-absl-py, pybind11

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -977,6 +977,7 @@ SUBDIR += pthreadpool
 SUBDIR += py-Automat
 SUBDIR += py-Jinja2
 SUBDIR += py-QtPy
+SUBDIR += py-absl-py
 SUBDIR += py-aiobotocore
 SUBDIR += py-aioitertools
 SUBDIR += py-aiosignal
@@ -1432,6 +1433,10 @@ SUBDIR += py-zope.event
 SUBDIR += py-zope.interface
 SUBDIR += py-zope.schema
 SUBDIR += py3c
+SUBDIR += pybind11
+SUBDIR += pybind11-json
+SUBDIR += pybind11_abseil
+SUBDIR += pybind11_protobuf
 SUBDIR += pydbus-common
 SUBDIR += pygobject3-common
 SUBDIR += pylint
