print/py-reportlab: 4.4.1

--- a/print/py-reportlab/Makefile
+++ b/print/py-reportlab/Makefile
@@ -1,11 +1,7 @@
-# Created by: Thomas Gellekum <tg@FreeBSD.org>
-
 PORTNAME=	reportlab
-PORTVERSION=	3.5.60
-PORTREVISION=	1
+DISTVERSION=	4.4.1
 CATEGORIES=	print python
-MASTER_SITES=	PYPI \
-		https://www.reportlab.com/ftp/
+MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTFILES=	${DISTNAME}${EXTRACT_SUFX} \
 		${PFBFER}
@@ -13,33 +9,33 @@ EXTRACT_ONLY=	${DISTNAME}${EXTRACT_SUFX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Library to create PDF documents using the Python language
+WWW=		https://www.reportlab.com/
 
 LICENSE=	bsd3
 
-BUILD_DEPENDS+=	${PY_PILLOW}
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 RUN_DEPENDS=	${PY_PILLOW}
 
-USES=		python
-USE_PYTHON=	distutils autoplist
-
-CONFLICTS=	py*-reportlab[^3]-[^3].* \
-		py*-reportlab-[^3].*
+USES=		cpe python
+USE_PYTHON=	autoplist pep517
 
 PFBFER_VERSION=	20180109
 PFBFER=		pfbfer-${PFBFER_VERSION}.zip
 
 MAKE_ENV=	PACKAGE_PATH="${REPORTLABDIR}"
 
-REPORTLABDIR=	${PYTHONPREFIX_SITELIBDIR}/reportlab
 DOCSDIR=	${PREFIX}/share/doc/${PKGNAMEPREFIX}${PORTNAME}
+NO_ARCH=	yes
+
+REPORTLABDIR=	${PYTHONPREFIX_SITELIBDIR}/reportlab
 PORTDOCS=	reportlab-userguide.pdf
 
 OPTIONS_DEFINE=	CJK FREETYPE DOCS
 OPTIONS_DEFAULT=CJK FREETYPE
-# XXX disable this 20190809 while linimon investigates why having it
-# enabled consumes all memory and swap during poudriere builds.
-OPTIONS_EXCLUDE_powerpc64=	DOCS
+
 CJK_DESC=	Adobe CMaps
+
 CJK_RUN_DEPENDS=	${LOCALBASE}/share/fonts/adobe-cmaps/ac15/cid2code.txt:print/adobe-cmaps
 FREETYPE_LIB_DEPENDS=	libfreetype.so:print/freetype2
 
