textproc/py-mkdocstrings-python: fix circular

--- a/textproc/py-mkdocstrings-python/Makefile
+++ b/textproc/py-mkdocstrings-python/Makefile
@@ -15,20 +15,14 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pdm-backend>0:devel/py-pdm-backend@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}griffe>=0.49:textproc/py-griffe@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}mkdocs-autorefs>=1.2:textproc/py-mkdocs-autorefs@${PY_FLAVOR}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}mkdocs-material>0:textproc/py-mkdocs-material@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}mkdocstrings>=0.26:textproc/py-mkdocstrings@${PY_FLAVOR}
-# textproc/py-mkdocstrings belongs to RUN_DEPENDS as well but would cause
-# a circular dependency (via py-mkdocstrings' PYTHON option).  It was therefore
-# moved to TEST_DEPENDS to at least allow the test suite to run.
-
 USES=		python:3.9+
 GH_PROJECT=	python
 USE_PYTHON=	autoplist pep517 pytest
 
-TEST_ENV=	PYTHONPATH=${STAGEDIR}${PYTHONPREFIX_SITELIBDIR}
-
 CONFLICTS_INSTALL=	${PYTHON_PKGNAMEPREFIX}mkdocstrings-python-legacy
 
 NO_ARCH=	yes
+# circular dependency so can't run test
+NO_TEST=	yes
 
 .include <bsd.port.mk>
