textproc/py-griffe: stop circular

--- a/textproc/py-griffe/Makefile
+++ b/textproc/py-griffe/Makefile
@@ -13,17 +13,12 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pdm-backend>0:devel/py-pdm-backend@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}colorama>=0.4:devel/py-colorama@${PY_FLAVOR}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}jsonschema>=4.17.3:devel/py-jsonschema@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}mkdocstrings>0:textproc/py-mkdocstrings@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}pytest-xdist>=3.3,1:devel/py-pytest-xdist@${PY_FLAVOR} \
-		git:devel/git
 
 USES=		python:3.9+
-USE_PYTHON=	autoplist concurrent pep517 pytest
-
-TEST_ARGS=	-n ${MAKE_JOBS_NUMBER}
-TEST_ENV=	PYTHONPATH=${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}
+USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
+# tests have circular dep
+NO_TEST=	yes
 
 .include <bsd.port.mk>
