cad/Makefile: ghdl

--- a/cad/Makefile
+++ b/cad/Makefile
@@ -5,6 +5,7 @@
     SUBDIR += digital
     SUBDIR += fidocadj
     SUBDIR += gdsreader
+    SUBDIR += ghdl
     SUBDIR += gtkwave
     SUBDIR += impact
     SUBDIR += libopencad
