lang/gcc13: fix path

--- a/lang/gcc13/Makefile
+++ b/lang/gcc13/Makefile
@@ -136,7 +136,7 @@ post-fake:
 
 .if ${ARCH} == amd64 && ${PORT_OPTIONS:MMULTILIB}
 	${MKDIR} ${FAKE_DESTDIR}${TARGLIB32}
-	${MV} ${FAKE_DESTDIR}${TRUE_PREFIX}/lib/lib32 ${FAKE_DESTDIRDIR}${TARGLIB32}/gcc${SUFFIX}
+	${MV} ${FAKE_DESTDIR}${TRUE_PREFIX}/lib/lib32 ${FAKE_DESTDIR}${TARGLIB32}/gcc${SUFFIX}
 .endif
 
 .for d in ${TARGLIB:S/^${PREFIX}\///} ${TARGLIB32:S/^${PREFIX}\///} ${LIBEXEC:S/^${PREFIX}\///}
