--- a/devel/fxdiv/Makefile
+++ b/devel/fxdiv/Makefile
@@ -20,13 +20,8 @@ CMAKE_OFF=	FXDIV_BUILD_TESTS FXDIV_BUILD_BENCHMARKS
 
 NO_BUILD=	yes
 NO_ARCH=	yes
+NO_TEST=	yes
 
 PLIST_FILES=	include/fxdiv.h
-
-do-test:
-	@cd ${BUILD_WRKSRC} && \
-		${SETENV} ${CONFIGURE_ENV} ${CMAKE_BIN} ${CMAKE_ARGS} -DFXDIV_BUILD_TESTS:BOOL=ON ${CMAKE_SOURCE_PATH} && \
-		${SETENV} ${MAKE_ENV} ${MAKE_CMD} ${MAKE_ARGS} ${ALL_TARGET} && \
-		${SETENV} ${MAKE_ENV} ${MAKE_CMD} ${MAKE_ARGS} test
 
 .include <bsd.port.mk>
