devel/pthreadpool: tests are broken

--- a/devel/pthreadpool/Makefile
+++ b/devel/pthreadpool/Makefile
@@ -21,13 +21,9 @@ GH_ACCOUNT=	Maratyszcza
 CMAKE_OFF=	PTHREADPOOL_BUILD_TESTS PTHREADPOOL_BUILD_BENCHMARKS
 CMAKE_ON=	BUILD_SHARED_LIBS
 
+NO_TEST=	yes
+
 PLIST_FILES=	include/pthreadpool.h \
 		lib/libpthreadpool.so
-
-do-test:
-	@cd ${BUILD_WRKSRC} && \
-		${SETENV} ${CONFIGURE_ENV} ${CMAKE_BIN} ${CMAKE_ARGS} -DPTHREADPOOL_BUILD_TESTS:BOOL=ON ${CMAKE_SOURCE_PATH} && \
-		${SETENV} ${MAKE_ENV} ${MAKE_CMD} ${MAKE_ARGS} ${ALL_TARGET} && \
-		${SETENV} ${MAKE_ENV} ${MAKE_CMD} ${MAKE_ARGS} test
 
 .include <bsd.port.mk>
