cad/uhdm: test borked

--- a/cad/uhdm/Makefile
+++ b/cad/uhdm/Makefile
@@ -14,7 +14,7 @@ BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}orderedmultidict>0:devel/py-orderedmultidi
 LIB_DEPENDS=	libcapnp.so:devel/capnproto
 TEST_DEPENDS=	googletest>0:devel/googletest
 
-USES=		cmake:testing compiler:c++17-lang python:build tcl:86,build
+USES=		cmake compiler:c++17-lang python:build tcl:86,build
 USE_LDCONFIG=	yes
 
 USE_GITHUB=	yes
@@ -26,7 +26,9 @@ CMAKE_ON=	BUILD_SHARED_LIBS \
 		UHDM_USE_HOST_GTEST
 CMAKE_OFF=	UHDM_BUILD_TESTS
 CMAKE_ARGS=	-DPython_EXECUTABLE=${PYTHON_CMD} -DPython3_EXECUTABLE=${PYTHON_CMD}
-CMAKE_TESTING_ON=	UHDM_BUILD_TESTS # tests fail to compile, see https://github.com/chipsalliance/UHDM/issues/1045
+#CMAKE_TESTING_ON=	UHDM_BUILD_TESTS # tests fail to compile, see https://github.com/chipsalliance/UHDM/issues/1045
+
+NO_TEST=	yes
 
 BINARY_ALIAS=	tclsh=${TCLSH}
 
