devel/aws-crt-cpp: update

--- a/devel/aws-crt-cpp/Makefile
+++ b/devel/aws-crt-cpp/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	aws-crt-cpp
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.32.5
+DISTVERSION=	0.32.8
 CATEGORIES=	devel
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -30,5 +30,7 @@ USE_LDCONFIG=	yes
 
 CMAKE_ON=	BUILD_SHARED_LIBS
 CMAKE_OFF=	BUILD_DEPS BUILD_TESTING
+
+NO_TEST=	yes
 
 .include <bsd.port.mk>
