cad/fidocadj: docs

--- a/cad/fidocadj/Makefile
+++ b/cad/fidocadj/Makefile
@@ -14,9 +14,9 @@ WWW=		https://darwinne.github.io/FidoCadJ/index.html
 
 LICENSE=	gpl3
 
+USES=		java
 DATADIR=	${JAVASHAREDIR}/${PORTNAME}
 
-USES=		java
 JAVA_VERSION=	11+
 
 NO_ARCH=	yes
@@ -35,8 +35,9 @@ do-install:
 	${INSTALL_SCRIPT} ${WRKDIR}/${PORTNAME}.sh ${STAGEDIR}${PREFIX}/bin/${PORTNAME}
 	${MKDIR} ${STAGEDIR}${DATADIR}; \
 	${INSTALL_DATA} ${DISTDIR}/${DIST_SUBDIR}/${PORTNAME}-${PORTVERSION}.jar ${STAGEDIR}${DATADIR}/
+
 do-install-DOCS-on:
-	${MKDIR} ${STAGEDIR}${DOCSDIR} && \
-	${INSTALL_DATA} ${DISTDIR}/${DIST_SUBDIR}/${DOCS_DISTFILES} ${STAGEDIR}${DOCSDIR}/
+	${MKDIR} ${FAKE_DESTDIR}${DOCSDIR} && \
+	${INSTALL_DATA} ${DISTDIR}/${DIST_SUBDIR}/${DOCS_DISTFILES} ${FAKE_DESTDIR}${DOCSDIR}/
 
 .include <bsd.port.mk>
