update musescore.  add libopusenc and tinyxml2

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -400,6 +400,7 @@ SUBDIR += teckit
 SUBDIR += texi2html
 SUBDIR += tidyp
 SUBDIR += tinyxml
+SUBDIR += tinyxml2
 SUBDIR += txt2man
 SUBDIR += uchardet
 SUBDIR += unoconv
