--- a/graphics/gdk-pixbuf2/Makefile
+++ b/graphics/gdk-pixbuf2/Makefile
@@ -1,13 +1,12 @@
 PORTNAME=	gdk-pixbuf
-PORTVERSION=	2.42.10
-PORTREVISION=	4
+PORTVERSION=	2.42.12
 CATEGORIES=	graphics
 MASTER_SITES=	GNOME
 PKGNAMESUFFIX=	2
 DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Graphic library for GTK+
+COMMENT=	Graphic library for GTK
 WWW=		https://developer.gnome.org/gdk-pixbuf/
 
 LICENSE=	lgpl+
@@ -23,12 +22,14 @@ MESON_ARGS=	-Dbuiltin_loaders="none" -Dgtk_doc=false -Dinstalled_tests=false -Dt
 TRIGGERS=	gdk-pixbuf-query-loaders
 SUB_LIST=	GTK2_VERSION=${GTK2_VERSION}
 
-LIBVERSION=	0.4200.10
+LIBVERSION=	0.4200.12
 PLIST_SUB+=	LIBVERSION=${LIBVERSION}
 
 OPTIONS_SUB=	yes
-OPTIONS_DEFINE=	JPEG MANPAGES PNG TIFF
-OPTIONS_DEFAULT=JPEG MANPAGES PNG TIFF
+OPTIONS_DEFINE=	GIF JPEG MANPAGES PNG TIFF
+OPTIONS_DEFAULT=GIF JPEG MANPAGES PNG TIFF
+
+GIF_MESON_ENABLED=	gif
 
 JPEG_USES=		jpeg
 JPEG_MESON_ENABLED=	jpeg
