print/py-uharfbuzz: try this

--- a/print/py-uharfbuzz/Makefile
+++ b/print/py-uharfbuzz/Makefile
@@ -21,7 +21,7 @@ LIB_DEPENDS=	libharfbuzz.so:print/harfbuzz
 USES=		compiler:c++11-lang pkgconfig python
 USE_PYTHON=	autoplist concurrent cython pep517
 
-MAKE_ENV+=	CYTHON_ANNOTATE=0 CYTHON_LINETRACE=0 USE_SYSTEM_LIBS=1
+FAKE_MAKEENV+=	CYTHON_ANNOTATE=0 CYTHON_LINETRACE=0 USE_SYSTEM_LIBS=1
 
 NO_TEST=	yes
 
