cad/digital: fix

--- a/cad/digital/Makefile
+++ b/cad/digital/Makefile
@@ -82,5 +82,6 @@ do-install:
 .endfor
 	${MKDIR} ${STAGEDIR}${PREFIX}/share/icons/hicolor/scalable/apps
 	${INSTALL_DATA} ${WRKSRC}/src/main/svg/icon.svg ${STAGEDIR}${PREFIX}/share/icons/hicolor/scalable/apps/${ICON_NAME}.svg
+	${REINPLACE_CMD} -e 's|${FAKE_DESTDIR}||g' ${PREFIX}/bin/digital
 
 .include <bsd.port.mk>
