--- a/graphics/gd/Makefile
+++ b/graphics/gd/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	libgd
-PORTVERSION=	2.3.1
-PORTREVISION=	1
+PORTVERSION=	2.3.3
 PORTEPOCH=	1
 CATEGORIES+=	graphics
 MASTER_SITES=	https://github.com/${PORTNAME}/${PORTNAME}/releases/download/gd-${PORTVERSION}/
@@ -16,14 +15,18 @@ CONFLICTS_INSTALL=	libgd ??-libgd
 
 FAKE_OPTS=	trueprefix
 
-USES=		cpe tar:xz pkgconfig pathfix libtool:keepla shebangfix
+USES=		cpe tar:xz pkgconfig pathfix libtool:keepla autoreconf shebangfix
 SHEBANG_FILES=	${WRKSRC}/src/bdftogd
 GNU_CONFIGURE=	yes
+CONFIGURE_ARGS=	--enable-gd-formats
+CFLAGS+=	-ffp-contract=off # do not contract to FMA or thereabouts, PR 278105
+TMPDIR?=	/tmp
+MAKE_ENV=	TMPDIR=${TMPDIR}
 SUB_FILES=	gdlib-config
-SUB_LIST=       MAJORVERSION=2 PORTVERSION=${PORTVERSION}
 USE_LDCONFIG=	yes
+TEST_TARGET=	check
 
-OPTIONS_DEFINE=	PNG JPEG WEBP TIFF FREETYPE FONTCONFIG RAQM XPM ICONV
+OPTIONS_DEFINE=	PNG JPEG WEBP TIFF XPM HEIF AVIF LIQ FREETYPE FONTCONFIG RAQM ICONV THREADS
 OPTIONS_DEFAULT=PNG JPEG WEBP TIFF FREETYPE FONTCONFIG ICONV
 NO_OPTIONS_SORT=yes
 OPTIONS_SUB=	yes
@@ -39,6 +42,16 @@ WEBP_CPPFLAGS=		-I${LOCALBASE}/include
 TIFF_LIB_DEPENDS=	libtiff.so:graphics/tiff
 TIFF_CONFIGURE_OFF=	--without-tiff
 TIFF_CPPFLAGS=		-I${LOCALBASE}/include
+HEIF_LIB_DEPENDS=	libheif.so:graphics/libheif
+HEIF_CONFIGURE_OFF=	--without-heif
+HEIF_CPPFLAGS=		-I${LOCALBASE}/include
+AVIF_LIB_DEPENDS=	libavif.so:graphics/libavif
+AVIF_CONFIGURE_OFF=	--without-avif
+AVIF_CPPFLAGS=		-I${LOCALBASE}/include
+LIQ_DESC=	libimagequant color conversion support
+LIQ_LIB_DEPENDS=	libimagequant.so:graphics/libimagequant
+LIQ_CONFIGURE_OFF=	--with-liq=no
+LIQ_CPPFLAGS=	-I${LOCALBASE}/include
 FREETYPE_LIB_DEPENDS=	libfreetype.so:print/freetype2
 FREETYPE_CONFIGURE_OFF=	--without-freetype
 FREETYPE_CPPFLAGS=	-I${LOCALBASE}/include
@@ -55,6 +68,7 @@ XPM_CONFIGURE_ON=	--with-x
 XPM_CONFIGURE_OFF=	--with-xpm=no
 ICONV_USES=	iconv
 ICONV_CONFIGURE_ON=	${ICONV_CONFIGURE_ARG}
+THREADS_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-threads
 
 .include <bsd.mport.options.mk>
 
@@ -98,7 +112,7 @@ pre-configure:
 	# bump shlib version
 	${REINPLACE_CMD} \
 		-e 's|^GDLIB_LT_CURRENT=3|GDLIB_LT_CURRENT=6|' \
-		${WRKSRC}/configure
+		${WRKSRC}/configure ${WRKSRC}/config/getlib.sh
 
 pre-configure-ICONV-off:
 	${REINPLACE_CMD} \
