--- a/devel/git-lfs/Makefile
+++ b/devel/git-lfs/Makefile
@@ -1,12 +1,12 @@
 PORTNAME=	git-lfs
 DISTVERSIONPREFIX=	v
-DISTVERSION=	3.0.2
-PORTREVISION=	4
+DISTVERSION=	3.6.1
 CATEGORIES=	devel
 MASTER_SITES=	https://github.com/${PORTNAME}/${PORTNAME}/releases/download/v${DISTVERSION}/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Git extension for versioning large files
+WWW=		https://git-lfs.github.com/
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE.md
@@ -14,6 +14,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.md
 RUN_DEPENDS=	git:devel/git
 
 USES=		go:modules
+GO_MODULE=	github.com/git-lfs/git-lfs/v3
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${DISTVERSION}
 
@@ -21,12 +22,12 @@ OPTIONS_DEFINE=		MANPAGES
 OPTIONS_DEFAULT=	MANPAGES
 OPTIONS_SUB=		yes
 
-MANPAGES_BUILD_DEPENDS=	ronn:textproc/rubygem-ronn
+MANPAGES_BUILD_DEPENDS=	asciidoctor:textproc/rubygem-asciidoctor
 
 NO_TEST=	yes
 
 post-build-MANPAGES-on:
-	cd ${GO_WRKSRC}/docs/man && ${LOCALBASE}/bin/ronn -r *.ronn
+	cd ${GO_WRKSRC}/docs/man && ${LOCALBASE}/bin/asciidoctor -b manpage *.adoc
 
 post-install-MANPAGES-on:
 	${INSTALL_MAN} ${GO_WRKSRC}/docs/man/*.1 ${FAKE_DESTDIR}${LOCALBASE}/share/man/man1
