--- a/graphics/graphviz/files/patch-configure.ac
+++ b/graphics/graphviz/files/patch-configure.ac
@@ -1,40 +1,26 @@
---- configure.ac.orig	2021-12-04 20:10:28 UTC
+--- configure.ac.orig	2024-12-06 23:55:56 UTC
 +++ configure.ac
-@@ -679,7 +679,7 @@ else
-       if test "x$GUILE_CONFIG" = "x"; then
-         use_guile="No (guile not available)"
-       else
--        [GUILE_VERSION=`$GUILE_CONFIG --version 2>&1 | sed -n '1 s/^.* \+\([0-9\.]\+\)$/\1/ p'`]
-+        [GUILE_VERSION=`$GUILE_CONFIG --version 2>&1 | sed -n '1 s/^.* \([0-9\.]*\)$/\1/ p'`]
-         GUILE_VERSION_MAJOR=`echo $GUILE_VERSION | cut -d '.' -f 1`
-         GUILE_VERSION_MINOR=`echo $GUILE_VERSION | cut -d '.' -f 2`
-         AC_CHECK_PROGS(GUILE,guile$GUILE_VERSION_MAJOR.$GUILE_VERSION_MINOR guile$GUILE_VERSION_MAJOR guile)
-@@ -897,17 +897,17 @@ else
-             if test "x$PKG_CONFIG" != "x"; then
- 	        AC_MSG_CHECKING(for Lua headers and libraries with pkg-config)
- 	        echo
--	        for l in "$lua_suffix" "" "53" "5.3" "52" "5.2" "51" "5.1" "50" "5.0" ; do
-+	        for l in "$lua_suffix" "" "53" "-5.3" "52" "-5.2" "51" "-5.1" "50" "5.0" ; do
+@@ -730,13 +730,13 @@ else
+ 	        for l in "$lua_suffix" "" "54" "5.4" "53" "5.3" "52" "5.2" "51" "5.1" ; do
  	            pkgconfig_lua_found=`$PKG_CONFIG --exists lua$l 2>/dev/null`
- 	            if test "x$?" = "x0" ; then
- 		        LUA_VERSION=`$PKG_CONFIG --modversion lua$l`
+ 	            if test "$?" = "0" ; then
 -                        LUA_INCLUDES="$LUA_CFLAGS "`$PKG_CONFIG --cflags lua$l`
 +                        LUA_INCLUDES="$LUA_CFLAGS "`$PKG_CONFIG --cflags-only-I lua$l`
                          LUA_LIBS="$LUA_LFLAGS "`$PKG_CONFIG --libs lua$l`
- 		        LUA_INSTALL_DIR="/usr/lib$LIBPOSTFIX/lua/`$PKG_CONFIG --variable=V lua`"
+ 		        LUA_INSTALL_DIR="`$PKG_CONFIG --variable=libdir lua$l`/lua"
  
  		        pkgconfig_lualib_found=`$PKG_CONFIG --exists lualib$l 2>/dev/null`
- 		        if test  "x$?" = "x0"; then
+ 		        if test  "$?" = "0"; then
 -		           LUA_INCLUDES="$LUA_CFLAGS "`$PKG_CONFIG --cflags lualib$l`
-+		           LUA_INCLUDES="$LUA_CFLAGS "`$PKG_CONFIG --cflags-only-I lualib$l`
++		           LUA_INCLUDES="$LUA_CFLAGS "`$PKG_CONFIG --flags-only-I lualib$l`
  		           LUA_LIBS="$LUA_LFLAGS "`$PKG_CONFIG --libs lualib$l`
  		        fi
                          break
-@@ -1324,6 +1324,7 @@ else
- 	    use_ruby="No (ruby not available)"
-           else
-             RUBY_CFLAGS="-I`$RUBY $srcdir/config/config_ruby.rb archdir`"
-+            RUBY_CFLAGS="${RUBY_CFLAGS} -I`$RUBY $srcdir/config/config_ruby.rb inc`"
- 	    # hack for powerpc-darwin8 (10.4)
- 	    if test "x$DARWIN" = "xyes"; then
- 	      RUBY_CFLAGS=`echo $RUBY_CFLAGS | sed 's/powerpc/universal/'`
+@@ -1028,6 +1028,7 @@ else
+             RUBY_CFLAGS="$RUBY_CFLAGS -I`$RUBY $srcdir/config/config_ruby.rb vendorhdrdir`"
+             RUBY_CFLAGS="$RUBY_CFLAGS -I`$RUBY $srcdir/config/config_ruby.rb sitehdrdir`"
+             RUBY_CFLAGS="$RUBY_CFLAGS -I`$RUBY $srcdir/config/config_ruby.rb rubyhdrdir`"
++	    #RUBY_CFLAGS="${RUBY_CFLAGS} -I`$RUBY $srcdir/config/config_ruby.rb inc`"
+             RUBY_LIBS="-L`$RUBY $srcdir/config/config_ruby.rb libdir` `$RUBY -rrbconfig -e \"puts RbConfig::CONFIG[['LIBRUBYARG_SHARED']]\"`"
+             RUBY_INSTALL_DIR="`$RUBY $srcdir/config/config_ruby.rb vendorarchdir`"
+ 	    if test "$RUBY_INSTALL_DIR" = ""; then
