copy from redis

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -187,6 +187,7 @@ SUBDIR += qt6-base_sqldriver
 SUBDIR += redis
 SUBDIR += redis62
 SUBDIR += redis72
+SUBDIR += redis74
 SUBDIR += rrdtool
 SUBDIR += ruby-bdb
 SUBDIR += sfcgal
