--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -198,6 +198,7 @@ SUBDIR += qt5-qtdiag
 SUBDIR += qt5-qtpaths
 SUBDIR += qt5-qtplugininfo
 SUBDIR += restic
+SUBDIR += rocinante
 SUBDIR += rpi-firmware
 SUBDIR += rsyslog8
 SUBDIR += rubygem-bundler
