--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -216,6 +216,7 @@ SUBDIR += sg3_utils
 SUBDIR += slurm-wlm
 SUBDIR += smartmontools
 SUBDIR += synergy
+SUBDIR += sysctlbyname-improved-kmod
 SUBDIR += system-tools-backends
 SUBDIR += tarsnap
 SUBDIR += tarsnap-gui
