--- a/devel/pecl-APCu/Makefile
+++ b/devel/pecl-APCu/Makefile
@@ -8,7 +8,7 @@ DISTNAME=	${PORTNAME:tl}-${PORTVERSION}
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	APC User Caching
 
-LICENSE=	php
+LICENSE=	PHP301
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 CONFLICTS_INSTALL=	pecl-APC
