--- a/graphics/pecl-imagick/Makefile
+++ b/graphics/pecl-imagick/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT?=	PHP wrapper to the ImageMagick/GraphicsMagick library version 6
 WWW=		https://pecl.php.net/package/imagick
 
-LICENSE=	php
+LICENSE=	PHP301
 
 USES=		cpe php:pecl localbase
 
