--- a/devel/py-pytest-metadata/Makefile
+++ b/devel/py-pytest-metadata/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Pytest plugin for test session metadata
 WWW=		https://github.com/pytest-dev/pytest-metadata
 
-LICENSE=	mpl
+LICENSE=	MPL20
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}hatchling>=1.13:devel/py-hatchling@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}hatch-vcs>=0.3:devel/py-hatch-vcs@${PY_FLAVOR}
