--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -9,7 +9,7 @@ DISTFILES=	thunderbird-78.8.0.txz hunspell-1.7.0_2.txz
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Mozilla Thunderbird for FreeBSD
 
-LICENSE=	mpl gpl2
+LICENSE=	MPL20 gpl2
 LICENSE_COMB=	dual
 
 LIB_DEPENDS+=	libicui18n.so:devel/icu \
