--- a/converters/p5-Encode-Detect/Makefile
+++ b/converters/p5-Encode-Detect/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Encode::Encoding subclass that detects the encoding of data
 WWW=		https://metacpan.org/release/Encode-Detect
 
-LICENSE=	mpl
+LICENSE=	MPL20
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		perl5
